# biospring

./: .actrc  .clang-format  .gitignore  CMakeLists.txt  Dockerfile  LICENSE.txt  README.md  README_DEBUG.md  conda-env.yml
.devcontainer/: devcontainer.json
.github/workflows/: Dockerfile  deploy.yml  local-debug.yml  main.yml
cmake/: FindFreeSASA.cmake  FindMDDriver.cmake  FindNetCDF_C.cmake  FindNetCDF_CXX.cmake
config/: BioSpring-config.sh.in
data/forcefield/: CAallresBaaden.ff  CAonlyBaaden.ff  CAonlyLewitt.ff  CGZaccharias.ff  CGZaccharias.ff_old  amber.ff  buildff.py  charge.txt  martini.ff  mass.txt  model.ff  repsilon.txt  transferkcalaa.txt  typetodesc.txt  typetotransfer.txt
data/martini/: prepare_martini_data.py
data/martini/forcefield/: martini_adjusted_from_HexadecanePartition.ff  martini_adjusted_from_OctanolPartition.ff  martini_hexadecane.ff  martini_octanol.ff
data/martini/reducerules/: martini.grp
data/reducerules/: CAallresBaaden.grp  CAonlyLewitt.grp  CGZaccharias.grp  CGZaccharias_RNA.grp  amber.grp
doc/: MSP_Options.md  User_Manual.md
example/: README.md  base.mk
example/001_GKinase/: Makefile  TUTO_GK  model.cdl  model.grp  model.nc  model.vmd  model_spring_steric.msp  model_spring_steric_electrostatic.msp  param.msp
example/2particles/: Makefile  README  model.nc  model.vmd  param.msp
example/IMPALA/Brasseur/Maltoporin/all_atoms/: Makefile
example/IMPALA/Brasseur/Maltoporin/lewitt/: Makefile  UMolState.py
example/IMPALA/Brasseur/Maltoporin/martini3/: Makefile  param.msp
example/IMPALA/Brasseur/OmpA/: UMolState.py
scripts/: addasa2cdl.py  addselection2cdl.py
scripts/outdated/: addrsa2cdl.py
scripts/outdated/articulatedrigidbody/: atomicstructure.py  bond.py  forcefield.py  joint.py  particle.py  particleproperties.py  pdb2cdlarb.py  rigidbody.py  rigidbodystructure.py  spring.py  springnetwork.py
scripts/outdated/articulatedrigidbody/example/: 1IYT.nc  model.msp
scripts/outdated/articulatedrigidbody/rota/: rotamere.txt
scripts/outdated/articulatedrigidbody/template/: biospring.template.cdl
src/: Constraint.cpp  Constraint.h  InsertionVector.cpp  InsertionVector.h  Selection.h  Vector3f.cpp  Vector3f.h  box.hpp  concepts.hpp  logging.cpp  logging.h  measure.cpp  measure.hpp  nsearch.hpp  timeit.hpp  topology.hpp  type_traits.hpp  utils.hpp  version.h.in
src/IO/: CSVSampleWriter.cpp  CSVSampleWriter.h  ForceFieldReader.cpp  ForceFieldReader.h  NetCDFReader.cpp  NetCDFReader.h  NetCDFWriter.cpp  NetCDFWriter.h  OpenDXReader.cpp  OpenDXReader.h  PDBReader.cpp  PDBReader.h  PDBTrajectoryWriter.cpp  PDBTrajectoryWriter.h  PDBWriter.cpp  PDBWriter.h  PQRReader.cpp  PQRReader.h  PQRWriter.cpp  PQRWriter.h  ReaderBase.h  ReduceRuleReader.cpp  ReduceRuleReader.h  SpnBuffer.h  WriterBase.h  XTCTrajWriter.cpp  XTCTrajWriter.h  io.cpp  io.h  modern.hpp
src/IO/modern/: CSVTrajectoryWriter.cpp  CSVTrajectoryWriter.hpp  PDBTrajectoryWriter.cpp  PDBTrajectoryWriter.hpp  TopologyWriterBase.hpp  TrajectoryManager.cpp  TrajectoryManager.hpp  TrajectoryWriterBase.hpp  WriterBase.hpp  XTCTrajectoryWriter.cpp  XTCTrajectoryWriter.hpp  pdb_format.hpp
src/IO/xdrfile/: CMakeLists.txt
src/cli/: argparse.cpp  argparse.hpp  biospring-cli.cpp  biospring-cli.h  biospring.cpp  editspn-cli.cpp  editspn-cli.h  editspn.cpp  mergespn-cli.cpp  mergespn-cli.h  mergespn.cpp  pdb2spn-cli.cpp  pdb2spn-cli.h  pdb2spn.cpp
src/configuration/: Configuration.hpp  SafeConfigurationReader.cpp  SafeConfigurationReader.hpp  Setting.hpp
src/forcefield/: CombinationRules.hpp  ForceField.cpp  ForceField.h  ForceFieldElectrostaticCoulombAndStericLennardJones_8_6Amber.h  ForceFieldElectrostaticCoulombAndStericLennardJones_8_6Lewitt.h  ForceFieldElectrostaticCoulombAndStericLennardJones_8_6Zacharias.h  ForceFieldElectrostaticCoulombAndStericLinear.h  constants.hpp  energy.hpp
src/forcefield/energy/: electrostatic.hpp  electrostatic_field.hpp  hydrophobic.hpp  imp.hpp  spring.hpp  steric.hpp
src/grid/: DenseGrid.hpp  GridCoordinatesSystem.cpp  GridCoordinatesSystem.hpp  InfiniteGrid.hpp  PotentialGrid.cpp  PotentialGrid.hpp  SparseGrid.hpp
src/interactor/: Interactor.cpp  Interactor.h
src/interactor/freesasa/: InteractorFreeSASA.cpp  InteractorFreeSASA.h
src/interactor/mddriver/: CustomData.cpp  CustomData.h  InteractorMDDriver.cpp  InteractorMDDriver.h
src/opencl/: CMakeLists.txt  SpringNetworkOpenCL.cpp  SpringNetworkOpenCL.h  biospring.cl  cl.hpp
src/reduce/: ParticleGroup.cpp  ParticleGroup.h  Reduce.cpp  Reduce.h  ReduceRule.cpp  ReduceRule.h  ReduceRuleContainer.hpp  Reducer.cpp  Reducer.h
src/rigidbody/: Quaternion.cpp  Quaternion.h  RigidBodiesManager.cpp  RigidBodiesManager.h  RigidBody.cpp  RigidBody.h  matrix.cpp  matrix.h  random.hpp
src/spn/: Particle.cpp  Particle.h  ParticleProperty.cpp  ParticleProperty.h  Spring.cpp  Spring.h  SpringNetwork.cpp  SpringNetwork.h
src/tests/: CMakeLists.txt  test-Box.cpp  test-Configuration.cpp  test-ForceFieldReader.cpp  test-OpenDXReader.cpp  test-ReduceRuleReader.cpp  test-Reducer.cpp  test-Vector3f.cpp  test-measure.cpp  test-nsearch.cpp  test-utils.cpp
src/tests/data/: model.ff  sample.dx
src/tests/grid/: CMakeLists.txt  test-DenseGrid.cpp  test-GridCoordinatesSystem.cpp  test-InfiniteGrid.cpp  test-PotentialGrid.cpp  test-SparseGrid.cpp
src/tests/regression/: CMakeLists.txt  CommandLine.h  test-biospring.cpp  test-electrostatic-energy.cpp  test-pdb2spn.cpp  test-spring-energy.cpp  test-steric-energy.cpp
src/tests/topology/: CMakeLists.txt  test-Particle.cpp  test-ParticleCollection.cpp  test-ParticleProperties.cpp  test-Spring.cpp  test-SpringCollection.cpp  test-Topology.cpp
src/topology/: Particle.cpp  Particle.hpp  ParticleCollection.cpp  ParticleCollection.hpp  ParticleProperties.cpp  ParticleProperties.hpp  Spring.hpp  SpringCollection.hpp  Topology.hpp
src/utils/: file.hpp  path.hpp  string.hpp
src/viewer/: Quaternion.cpp  Quaternion.h  SpringNetworkViewer.cpp  SpringNetworkViewer.h  TrackBall.cpp  TrackBall.h  biospring-viewer.cpp
(+18 files in other folders)
